<resources>
    <string name="app_name">CaveAlarm</string>

    <string name="add_alarm">添加闹钟</string>
    <string name="create_alarm">创建闹钟</string>
    <string name="create_success">创建成功</string>
    <string name="create_fail">创建失败</string>
    <string name="text_ring_time">00:00</string>
    <string name="text_next_ring">后响铃</string>
    <string name="text_next_ring_show">23小时59分钟后响铃</string>
    
    <string name="ring_cycle">重复周期</string>
    <string name="ring_note">响铃备注</string>
    <string name="ring_note_hint">输入备注</string>
    <string name="create_ring_dialog_title">确定创建闹钟？</string>

</resources>
